# DEPA

./: .gitignore  CMakeLists.txt  mermaid.mmd  opdracht.txt
src/: ANDGate.cpp  ANDGate.h  Circuit.cpp  Circuit.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  Edge.cpp  Edge.h  Input.cpp  Input.h  InputFileHandler.cpp  InputFileHandler.h  LogicGate.cpp  LogicGate.h  NANDGate.cpp  NANDGate.h  NORGate.cpp  NORGate.h  NOTGate.cpp  NOTGate.h  ORGate.cpp  ORGate.h  OutputHandler.cpp  OutputHandler.h  Probe.cpp  Probe.h  Simulator.cpp  Simulator.h  XORGate.cpp  XORGate.h  main.cpp
test_circuits/: full_adder.txt
